[package]
name = "pokimans_client"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[dependencies]
bevy = { workspace = true }
tokio = {workspace = true }
pokimans_common = { path = "../pokimans_common" }

bevy_console = { git = "https://github.com/RichoDemus/bevy-console.git", branch = "main" }